--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3645,7 +3645,7 @@
 		-webkit-justify-content: center;
 		-ms-justify-content: center;
 		justify-content: center;
-		background-image: url("images/GuildWars2.jpg"), url("images/pattern-size1.svg");
+		background-image: url("images/GuildWars2.jpg");
 		background-position: top left, center center;
 		background-attachment: fixed, fixed;
 		background-size: auto, cover;
@@ -3903,7 +3903,7 @@
 		@media screen and (max-width: 1280px) {
 
 			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size2.svg");
+				background-image: url("images/GuildWars2.jpg");
 			}
 
 		}
@@ -3947,7 +3947,7 @@
 		@media screen and (max-width: 736px) {
 
 			#header {
-				background-image: url("images/overlay.png"), url("images/pattern-size3.svg");
+				background-image: url("images/GuildWars2.jpg");
 			}
 
 				#header h1 {
