--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3630,7 +3630,7 @@
 /* Header */
 
 	#header {
-		background-color: #4696e5;
+		background-color: transparent;
 		color: #d0e4f8;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
