--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1712,7 +1712,7 @@
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
+			color: blue;
 			text-decoration: none;
 			border-bottom: none;
 		}
