--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1712,7 +1712,7 @@
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: blue;
+			color: inherit;
 			text-decoration: none;
 			border-bottom: none;
 		}
@@ -1992,7 +1992,7 @@
 	input[type="button"],
 	button,
 	.button {
-		background-color: transparent;
+		background-color: #ffffff;
 		color: #828282 !important;
 		box-shadow: inset 0 0 0 2px #e6e6e6;
 	}
