--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3658,7 +3658,7 @@
 		#header input[type="button"],
 		#header button,
 		#header .button {
-			background-color: #ffffff;
+			background-color: #ffffff !important;
 			color: #000000 !important;
 			box-shadow: inset 0 0 0 2px rgba(255, 255, 255, 0.25);
 		}
