--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2699,9 +2699,9 @@
 		text-align: center;
 	}
 
-	header p {
+	header p { /* This area is for the <p> tag */
 		position: relative;
-		margin: 0 0 1.5em 0;
+		margin: 0.5em 5em 1.5em;
 		text-align: left;
 	}
 
