--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3827,7 +3827,7 @@
 		}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
-			color: #ffffff;
+			color: #000000;
 		}
 
 		#header blockquote {
