revert class tag & add important to footer for center allignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4090,7 +4090,7 @@
 		color: #999999;
 		padding: 4.5em 0 2.5em 0 ;
 		color: #b0b0b0;
-		text-align: center;
+		text-align: center !important;
 	}
 
 		#footer input, #footer select, #footer textarea {
