--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,3 +79,31 @@
 			-ms-transition: none !important;
 			transition: none !important;
 		}
+		
+
+/* Simple Implementation */
+/* Header */
+
+	#header {
+		background-color: transparent;
+		color: #d0e4f8;
+		padding: 4.5em 0 2.5em 0 ;
+		-moz-align-items: center;
+		-webkit-align-items: center;
+		-ms-align-items: center;
+		align-items: center;
+		display: -moz-flex;
+		display: -webkit-flex;
+		display: -ms-flex;
+		display: flex;
+		-moz-justify-content: center;
+		-webkit-justify-content: center;
+		-ms-justify-content: center;
+		justify-content: center;
+		background-image: url("images/GuildWars2.jpg");
+		background-position: top left, center center;
+		background-attachment: fixed, fixed;
+		background-size: auto, cover;
+		height: 100vh;
+		min-height: 35em;
+	}
