--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -82,8 +82,124 @@
 		
 
 /* Simple Implementation */
-/* Header */
+/* Type */
 
+	body {
+		color: #999999;
+	}
+
+	html, input, select, textarea {
+		font-size: 16pt;
+	}
+
+		@media screen and (max-width: 1680px) {
+
+			html, input, select, textarea {
+				font-size: 13pt;
+			}
+
+		}
+
+		@media screen and (max-width: 1280px) {
+
+			html, input, select, textarea {
+				font-size: 12pt;
+			}
+
+		}
+
+		@media screen and (max-width: 360px) {
+
+			html, input, select, textarea {
+				font-size: 11pt;
+			}
+
+		}
+
+	body, input, select, textarea {
+		font-family: Arial, Helvetica, sans-serif;
+		font-weight: normal;
+		line-height: 1.5em;
+		letter-spacing: -0.015em;
+	}
+	
+	strong, b {
+		font-weight: bold;
+	}
+
+	em, i {
+		font-style: italic;
+	}
+
+	p {
+		text-align: left;
+		color: inherit;
+		margin: 0 0 2em 0;
+	}
+
+	h1, h2, h3, h4, h5, h6 {
+		font-weight: normal;
+		line-height: 1em;
+		margin: 0 0 1em 0;
+		letter-spacing: -0.0125em;
+	}
+
+		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+			color: inherit;
+			text-decoration: none;
+			border-bottom: none;
+		}
+
+		@media screen and (max-width: 980px) {
+
+			h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+				display: none;
+			}
+
+		}
+
+	h2 {
+		font-size: 1.75em;
+		line-height: 1.5em;
+	}
+
+	h3 {
+		font-size: 1.5em;
+		line-height: 1.5em;
+	}
+
+	h4 {
+		font-size: 1.1em;
+		line-height: 1.5em;
+	}
+
+	h5 {
+		font-size: 0.9em;
+		line-height: 1.5em;
+	}
+
+	h6 {
+		font-size: 0.7em;
+		line-height: 1.5em;
+	}
+
+	@media screen and (max-width: 736px) {
+
+		h2 {
+			font-size: 1.25em;
+		}
+
+		h3 {
+			font-size: 1.2em;
+		}
+
+		h4 {
+			font-size: 1em;
+		}
+
+	}
+	
+/* Header */
 	#header {
 		background-color: transparent;
 		color: #d0e4f8;
@@ -106,4 +222,7 @@
 		background-size: auto, cover;
 		height: 100vh;
 		min-height: 35em;
+	}
+	#header h1 {
+		color: #808080;
 	}
