update header text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,18 @@
 		font-size: 1em;
 	}
 	#header h1 {
-		color: #808080;
-		font-size: 1.3em;
-		line-height: 1.5em;
-	}
+			font-size: 3.25em;
+			font-weight: bold;
+			margin-bottom: 0.5em;
+			color: #808080;
+		}
+
+		#header p {
+			font-size: 1.5em;
+			line-height: 1.35em;
+			margin: 0.5em 5em 0.5em;
+		}
+
+			#header p br {
+				display: inline;
+			}
