check blue font

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@
 /* Header */
 	#header {
 		background-color: transparent;
-		color: #d0e4f8;
+		color: #0000ff;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
 		-webkit-align-items: center;
