--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,7 +212,7 @@
 	
 /* Header */
 	#header {
-		background-color: transparent;
+		background-color: rgba(255, 255, 255, 0.05);
 		color: #0000ff;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
