--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,7 +212,7 @@
 	
 /* Header */
 	#header {
-		background-color: rgba(255, 255, 255, 0.5);
+		background-color: transparent;
 		color: #0000ff;
 		padding: 4.5em 0 2.5em 0 ;
 		-moz-align-items: center;
@@ -236,6 +236,7 @@
 		font-size: 1em;
 	}
 	#header h1 {
+			background-color: rgba(255, 255, 255, 0.1);
 			font-size: 3.25em;
 			font-weight: bold;
 			margin-bottom: 0.5em;
@@ -243,6 +244,7 @@
 		}
 
 		#header p {
+			background-color: rgba(255, 255, 255, 0.1);
 			font-size: 1.5em;
 			line-height: 1.35em;
 			margin: 0.5em 5em 0.5em;
