--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,6 @@
 		}
 		
 
-/* Simple Implementation */
 /* Type */
 
 	body {
@@ -253,3 +252,8 @@
 			#header p br {
 				display: inline;
 			}
+			
+/* Main */
+	#main {
+		background-color: rgba(255, 255, 255, 0.15);
+	}
