--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -253,7 +253,83 @@
 				display: inline;
 			}
 			
-/* Main */
-	#main {
+/* Footer */
+
+	#footer {
+		background-color: rgba(255, 255, 255, 0.15);
+		color: #999999;
+		padding: 4.5em 0 2.5em 0 ;
+		color: #b0b0b0;
+	}
+
+		#footer input, #footer select, #footer textarea {
+			color: #999999;
+		}
+
+		#footer a {
+			color: inherit;
+			border-bottom-color: #c6c6c6;
+		}
+
+			#footer a:hover {
+				color: #4696e5;
+			}
+
+		#footer strong, #footer b {
+			color: #828282;
+		}
+
+		#footer h1, #footer h2, #footer h3, #footer h4, #footer h5, #footer h6 {
+			color: #828282;
+		}
+
+		#footer blockquote {
+			border-left-color: #d6d6d6;
+		}
+
+		#footer code {
+			background: rgba(144, 144, 144, 0.075);
+			border-color: #d6d6d6;
+		}
+
+		#footer hr {
+			border-bottom-color: #d6d6d6;
+		}
+
+		#footer a {
+			color: inherit;
+		}
+
+		#footer .copyright {
+			font-size: 0.8em;
+			text-align: center;
+		}
+
+		@media screen and (max-width: 980px) {
+
+			#footer {
+				padding: 4em 4em 2em 4em ;
+			}
+
+		}
+
+	@media screen and (max-width: 736px) and (orientation: landscape) {
+
+		#footer {
+			padding: 3em 3em 1em 3em ;
+		}
+
+	}
+
+	@media screen and (max-width: 736px) and (orientation: portrait) {
+
+		#footer {
+			padding: 3em 1.5em 1em 1.5em ;
+		}
+
+	}
+			
+/* Opac */
+	#opac {
 		background-color: rgba(255, 255, 255, 0.15);
 	}
