--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -209,6 +209,11 @@
 
 	}
 	
+	header p { /* This area is for the <p> tag */
+		position: relative;
+		margin: 0.5em 10em 1.5em;
+	}
+	
 /* Header */
 	#header {
 		background-color: transparent;
