--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,6 +85,7 @@
 
 	body {
 		color: #999999;
+		background-color: rgba(255, 255, 255, 0.15);
 	}
 
 	html, input, select, textarea {
@@ -333,9 +334,4 @@
 			padding: 3em 1.5em 1em 1.5em ;
 		}
 
-	}
-			
-/* Opac */
-	#opac {
-		background-color: transparent;
 	}
