--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -85,7 +85,7 @@
 
 	body {
 		color: #999999;
-		background-color: rgba(255, 255, 255, 0.15);
+		background-image: url("images/GuildWars2.jpg");
 	}
 
 	html, input, select, textarea {
