--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -210,6 +210,10 @@
 
 	}
 	
+	header {
+		background-color: transparent;
+	}
+	
 	header p { /* This area is for the <p> tag */
 		position: relative;
 		margin: 0.5em 10em 1.5em;
