--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,7 @@
 	}
 
 	body {
-		background: #ffffff;
+		background: transparent;
 	}
 
 		body.is-loading *, body.is-loading *:before, body.is-loading *:after {
@@ -85,7 +85,6 @@
 
 	body {
 		color: #999999;
-		background-color: rgba(255, 255, 255, 0.15);
 	}
 
 	html, input, select, textarea {
