--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,7 +300,7 @@
 			font-size: 3.25em;
 			font-weight: bold;
 			margin-bottom: 0.5em;
-			color: #808080;
+			color: black;
 		}
 
 		#header p {
