--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,7 +282,8 @@
 	#how_to h2 {
 		font-weight: bold;
 		font-size: 2em;
-		line-height: 1.5em !important; 
+		line-height: 1.5em;
+		padding-bottom: 0;
 	}
 	
 	
