--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,7 +214,7 @@
 	
 	header p { /* This area is for the <p> tag */
 		position: relative;
-		margin: 0.5em 10em 1.5em;
+		margin: 5% 100% 50%;
 	}
 	
 /* Button */
