--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -332,6 +332,13 @@
 		color: #ff2700;
 	}
 	
+/* Graph */
+	#graph {
+		max-width: 800px;
+		height: 800px;
+		margin: auto;
+	}
+	
 	
 /* Header */
 	#header {
